# ISYE7406-US_Traffic

./: .gitignore  Dockerfile  README.md  linear_svr.joblib  population.json  population_data.json  predict.py  preprocessing.ipynb  preprocessing_population.ipynb  pyproject.toml  readme.md  requirement.txt  requirements.txt  start-dev.sh  train_per_zipcode.ipynb  train_svm.ipynb
api/: app.py  predict.py  requirements.txt
apis/: .env  all_apis.py  index.html
app/: app.py  predict.py
experiment/: preprocessing.ipynb  train_svm.ipynb
model/: categorical_vars_info.joblib  data_colnames.joblib  linear_svr.joblib  scaler.joblib
ui/: Dockerfile  package.json  vercel.json
ui/src/: App.css  App.js  fields.js
