[tool.poetry]
name = "data-mining"
version = "0.1.0"
description = ""
authors = ["giantStaps <ruweima86@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
numpy = "2.0.*"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
